# plt-project

./: .gitignore  Dockerfile  README.md  _semant.ml  ast.ml  codegen.ml  docker-compose.yml  dune  dune-project  example.pat  irgen.ml  main.ml  parser.ml  parser.mli  parser.mly  parser.output  pat_checker  pat_sast.ml  plt.ml  sast.ml  sast_printer.ml  scanner.ml  scanner.mll  scanner_state.ml  semant.ml  semantic.ml  semantic.mli  semantics.ml
highlighting/: README.md  highlight_pat.py  pat_lexer.py
highlighting/code/: array_ex.pat  fizzbuzz.pat  lang_tut_1.pat  lang_tut_2.pat  reverse.pat  test.pat
highlighting/output/: array_ex.tex  fizzbuzz.tex  lang_tut_1.tex  lang_tut_2.tex  pat_style.tex  reverse.tex  test.tex
tests/: dune  test_ast.ml  test_scanner.ml  test_semant.ml
tests/test_programs/: array_ex.pat  assert.pat  assign.pat  cap.pat  cast.pat  complex.pat  fizzbuzz.pat  funky.pat  inventory.pat  len.pat  reverse.pat  sum.pat  type_error.pat
