; process scanner.mll with ocamllex
(ocamllex scanner)

; define the scanner as a library
(library
(name scanner)
(modules scanner))

; define the ast as a library
(library
(name ast)
(modules ast))

; define sast as a library that depends on ast
(library
  (name sast)
  (modules sast)
  (libraries ast))

; define semant as a library that depends on ast and sast
(library
  (name semant)
  (modules semant)
  (libraries ast sast))

(executable
 (name hello)
 (modules hello)
 (libraries ))
