; process scanner.mll with ocamllex
(ocamllex scanner)

; define the ast as a library (first, as others depend on it)
(library
  (name ast)
  (modules ast))

(library
  (name scanner)
  (modules scanner)
  (libraries parser))

; define parser which generates token types (depends on ast)
(library
  (name parser)
  (modules parser)
  (libraries ast))

; define sast as a library that depends on ast
(library
  (name sast)
  (modules sast)
  (libraries ast))

  (library
   (name sast_printer)
   (modules sast_printer)
   (libraries ast sast))

  (executable
   (name plt)
   (modules plt)
   (libraries ast sast scanner parser semant sast_printer))

; define semant as a library that depends on ast and sast
(library
  (name semant)
  (modules semant)
  (libraries ast sast))

(executable
 (name hello)
 (modules hello)
 (libraries ))
