(test
 (name test_scanner)
 (modules Test_scanner)
 (libraries scanner parser ast ounit2)) ; Use internal names

 (test
  (name test_ast)
  (modules Test_ast)
  (libraries ast ounit2)) ; Use internal names

 (test
  (name test_semant)
  (modules Test_semant)
  (libraries semant ast sast ounit2)) ; Use internal names
